Atualizações feitas para estudos

--- a/projeto 2/index.html
+++ b/projeto 2/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>WEB PRAROZ</title>
+    <title>RECEITAS DA VOVÓ</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="./img/logo.png" type="image/png">
 </head>
 <body>
     <header>
@@ -16,29 +17,29 @@
 
             <ul>
                 <li class="active"><a href=""><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Dessert</a></li>
-                <li><a href="">Appetizer</a></li>
-                <li><a href="">Pasta</a></li>
-                <li><a href="">Salad</a></li>
-                <li><a href="">Burger</a></li>
-                <li><a href="">Pizza</a></li>
-                <li><a href=""><i class="fa fa-caret-down"></i>More Recipes</a>
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Bolo</a></li>
+                <li><a href="">Torta</a></li>
+                <li><a href="">Pudim</a></li>
+                <li><a href="">Saudáveis</a></li>
+                <li><a href="">Lanches</a></li>
+                <li><a href="">Sobremesas</a></li>
+                <li><a href=""><i class="fa fa-caret-down"></i>Mais Receitas</a>
                 <div class="sub-menu">
                     <ul>
-                        <li><a href="">Cookies</a>
-                            <li><a href="">Sandwich </a>
+                        <li><a href="">Massas</a>
+                            <li><a href="">Bebidas</a>
                     </ul>
                 </div></li>
             </ul>
         </div>
         <div class="title">
-            <h1>HOMIE RECIPES</h1>
+            <h1>RECEITAS DA VOVÓ</h1>
         </div>
         <div class="button">
-            <a href="#" class="btn">WATCH VIDEOS</a>
-            <a href="#" class="btn">BASIC SKILLS</a>
-            <a href="#" class="btn">LEARN MORE</a>
+            <a href="#" class="btn">ENVIAR SUA RECEITA</a>
+            <a href="#" class="btn">DESTAQUES</a>
+            <a href="#" class="btn">PRINCIPAIS INGREDIENTES</a>
         </div>
     </header>
 </body>
