--- a/projeto 3/index.html
+++ b/projeto 3/index.html
@@ -27,7 +27,7 @@
                     <img src="img/search.png" alt="">
                     <input type="text">
                 </div>
-                <h1>Straw<span>berries</span></h1>
+                <h1>Water<span>melon</span></h1>
                 <h3>Always fills your <span>heart with joy</span></h3>
                 <p>The stanar chunk of Lorem Ipsum used since the 1500s is reproduced for those interested.<br> Duis era
                     ex, oretium et blandit nec, dictum sit amet metus.</p>
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="right-column">
-                <img src="img/feature.png" alt="">
+                <img src="img/c919d210bde067fc542cd1dceca6e9c9-removebg-preview.png" alt="">
             </div>
 
         </div>
