--- a/projeto 1/index.html
+++ b/projeto 1/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Web Page Design</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
